# CourseWork

./: CMakeLists.txt
Game/: CMakeLists.txt  main.cpp
config/: config.json
src/: camera.cpp  engine.cpp  input.cpp  json_config.cpp  light.cpp  main.cpp  shader.cpp  skybox.cpp  table.cpp  texture.cpp  window.cpp  world.cpp
src/engine/camera/: camera.cpp  camera.hpp  camera_frustum.cpp  camera_frustum.hpp  fly_camera.cpp  fly_camera.hpp
src/engine/glad/: glad.c  glad.h  khrplatform.h
src/engine/lighting/: directional_light.hpp  point_light.hpp
src/engine/math/: common.hpp  conversions.hpp  math.hpp
src/engine/math/linear_algebra/: matrix.hpp  operation.hpp  quaternion.hpp  transformation.hpp  vector.hpp
src/engine/mesh/: circle.cpp  circle.hpp  cube.cpp  cube.hpp  line_strip.cpp  line_strip.hpp  mesh.cpp  mesh.hpp  plane.cpp  plane.hpp  quad.cpp  quad.hpp  sphere.cpp  sphere.hpp  text.cpp  text.hpp  torus.cpp  torus.hpp
src/engine/renderer/: command_buffer.cpp  command_buffer.hpp  gl_cache.cpp  gl_cache.hpp  render_command.hpp  render_target.cpp  render_target.hpp  renderer.cpp  renderer.hpp
src/engine/resources/: font_loader.cpp  font_loader.hpp  mesh_loader.cpp  mesh_loader.hpp  resources.cpp  resources.hpp  shader_loader.cpp  shader_loader.hpp  texture_loader.cpp  texture_loader.hpp
src/engine/scene/: background.cpp  background.hpp  scene.cpp  scene.hpp  scene_node.cpp  scene_node.hpp
src/engine/shading/: font.cpp  font.hpp  material.cpp  material.hpp  shader.cpp  shader.hpp  shading_types.hpp  texture.cpp  texture.hpp  texture_cube.cpp  texture_cube.hpp
src/engine/stb/: stb_image.h
src/engine/utility/: string_id.hpp
src/engine/utility/logging/: log.cpp  log.hpp
src/include/: camera.hpp  def.hpp  engine.hpp  input.hpp  json_config.hpp  light.hpp  shader.hpp  skybox.hpp  table.hpp  texture.hpp  window.hpp  world.hpp
